# reasongate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RESULTS.md  ROADMAP.md  SECURITY.md  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  run_tests.sh  run_web.py  setup.py
.github/workflows/: ci.yml  keepalive.yml
app/: api.py
app/model/: attack_bank.npz  meta.json  model.joblib
app/static/: index.html
docs/: stakes.tape  threat-model.md
eval/: ablation.py  adversarial.py  bench_existing.py  bipia_bench.py  build_benign_instructional.py  build_best.py  calibrate_presets.py  compare.py  embed_clf.py  head_to_head.py  make_deploy_model.py  ood_test.py  pipeline_real.py  public_bench.py  public_bench_ml.py  real_eval.py  recalibrate.py  retrain_hardneg.py  retrain_hardneg_clean.py  run_eval.py  second_attack_set.py  train_save.py  train_tree.py  validate.py
examples/: demo.py  demo_obfuscation.py  demo_real.py
examples/stakes_demo/: README.md  __init__.py  agent.py  backends.py  run.py  scenario.py
llmshield/detectors/: classifier.py
reasongate/: __init__.py  agent_gate.py  audit.py  embeddings.py  features.py  policy.py  registry.py  session.py  shield.py  types.py
reasongate/adapters/: anthropic_llm.py
reasongate/detectors/: __init__.py  base.py  canary.py  classifier.py  indirect.py  injection.py  leakage.py  ml_injection.py  normalize.py
reasongate/models/: meta.json
tests/: test_agent_gate.py  test_audit.py  test_embeddings_provider.py  test_input_limit.py  test_policy.py  test_shield.py  test_stakes_demo.py
