[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reasongate"
version = "0.1.0"
description = "Explainable, model-agnostic LLM security gate: every block carries a reason."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cagri Temel" }]
keywords = ["llm", "security", "prompt-injection", "jailbreak", "guardrail", "explainable", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Cekirdek (Shield + kural/normalize/indirect/canary dedektorleri) SAF PYTHON — sifir bagimlilik.
dependencies = []

[project.optional-dependencies]
# ML dedektorleri (embedding + soft tree) ve egitim/degerlendirme
ml = ["voyageai>=0.3", "scikit-learn>=1.3", "numpy<2", "joblib>=1.3"]
trees = ["neural-trees>=0.1.2"]   # SoftDecisionTree (torch ceker, numpy<2 ister)
# Korumali web demo / API sunucusu
serve = ["fastapi>=0.104", "uvicorn>=0.24", "pydantic>=2.0", "anthropic>=0.40"]
dev = ["pytest>=7", "reasongate[ml,serve]"]

[project.urls]
Homepage = "https://github.com/cgrtml/reasongate"
Issues = "https://github.com/cgrtml/reasongate/issues"

[tool.setuptools.packages.find]
include = ["reasongate*"]
exclude = ["eval*", "app*", "examples*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
